# mobile-app-analytics

./: Makefile  README.md  pyproject.toml
notebooks/: GetData.ipynb
src/: extract.py  load_into_bucket.py
