[tool.poetry]
name = "Mobile Engineering"
version = "1.0.0"
description = "Engineering and Analytics for mobile data"
authors = ["Igor Iakubovskii"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
tqdm = "*"
psutil = "*"
loguru = "*"
python-dotenv = "*"


[build-system]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12, <3.13.0"

## Important
pandas = "^2.3.0"
numpy = "^2.3.1"
polars = "^1.31.0"
serpapi = "*"
google-search-results = "*"
faker = "*"
pyarrow = "*"
fastparquet = "*"
boto3 = "*"

[tool.poetry.group.linters]
optional = true


[tool.poetry.group.linters.dependencies]
ruff = "==0.3.5"
mypy = "^1.15.0"
types-requests = "^2.28.0"
types-orjson = "^3.6.2"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.6"
pytest-xdist = "^3.1.0"

# ========== Configuration ruff ==========
[tool.ruff]
line-length = 120

[tool.ruff.lint.pylint]
# Maximum number of nested code blocks for function / method
max-nested-blocks = 3
# Maximum number of branches for function / method body
max-branches = 15
# Maximum number of statements in function / method body
max-statements = 30

[tool.ruff.lint]
exclude = [".git", ".venv"]
ignore = []
select = ["C9", "E", "F", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 15

# ========== Configuration mypy ==========
[tool.mypy]
ignore_missing_imports = true
no_warn_no_return = true
namespace_packages = true
show_error_codes = true
pretty = true

no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_unreachable = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disable_error_code = "override"